--- a/Kubernetes/Kubernetes-manifest/azure-board.yaml
+++ b/Kubernetes/Kubernetes-manifest/azure-board.yaml
@@ -24,7 +24,7 @@ spec:
       #   command: ['sh', '-c', "until nslookup customapi.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for customapi; sleep 2; done"]
       containers:
       - name: azure-board-processor
-        image: psknowhow/azure-board-processor:8.1.1
+        image: speedtools.azurecr.io/knowhow-azure-board-processor:8.3.2-SNAPSHOT
         imagePullPolicy: Always
         env:
             - name: spring.data.mongodb.uri
