--- a/Kubernetes/Kubernetes-manifest/ingress-uat-knowhow.yaml
+++ b/Kubernetes/Kubernetes-manifest/ingress-uat-knowhow.yaml
@@ -4,7 +4,8 @@ metadata:
   name: knowhow-ui
   namespace: uat-knowhow
   annotations:
-    appgw.ingress.kubernetes.io/appgw-ssl-certificate: wildcard-tools-publicos-sapient-com
+    kubectl.kubernetes.io/last-applied-configuration: |
+      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"name":"knowhow-ui","namespace":"uat-knowhow"},"spec":{"ingressClassName":"azure-application-gateway","rules":[{"host":"stage-psknowhow.tools.publicis.sapient.com","http":{"paths":[{"backend":{"service":{"name":"knowhow-ui","port":{"number":80}}},"path":"/","pathType":"Exact"}]}}]}}
 spec:
   ingressClassName: azure-application-gateway
   rules:
@@ -18,7 +19,7 @@ spec:
               port:
                 number: 80
           pathType: Exact
-
+ 
 status:
   loadBalancer:
     ingress:
