[maven-release-plugin] prepare for next development iteration

--- a/processors/github-action/pom.xml
+++ b/processors/github-action/pom.xml
@@ -23,7 +23,7 @@
   <description>Github Actions processor service</description>
   <packaging>jar</packaging>
   <artifactId>githubaction-processor</artifactId>
-  <version>8.3.4</version>
+  <version>8.3.4-SNAPSHOT</version>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
@@ -236,7 +236,7 @@
 
 
   <scm>
-    <tag>8.3.4</tag>
+    <tag>8.3.3</tag>
   </scm>
 </project>
 
