--- a/processors/bamboo/pom.xml
+++ b/processors/bamboo/pom.xml
@@ -23,7 +23,7 @@
 	<description>bamboo processor</description>
 	<packaging>jar</packaging>
 	<artifactId>bamboo-processor</artifactId>
-	<version>8.3.4</version>
+	<version>8.3.4-SNAPSHOT</version>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -222,6 +222,6 @@
 
 
 	<scm>
-		<tag>8.3.4</tag>
+		<tag>8.3.3</tag>
 	</scm>
 </project>
