--- a/processors/bitbucket/src/main/resources/application.properties
+++ b/processors/bitbucket/src/main/resources/application.properties
@@ -16,13 +16,18 @@
 #
 ################################################################################
 
-## MongoDB related properties
+## MongoDB related properties - Start
 
-spring.data.mongodb.host=mongodb
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=kpidashboard
-spring.data.mongodb.username=devadmin
-spring.data.mongodb.password=
+# Local MongoDB Connection Properties
+spring.data.mongodb.uri=mongodb://devadmin:admin%40123@localhost:27017/kpidashboard
+
+# MongoDB Atlas URI
+spring.data.mongodb.atlas.uri=mongodb+srv://testuser:""@cluster/kpidashboard
+
+# Toggle to determine whether to use local MongoDB or MongoDB Atlas
+mongodb.connection.atlas=false
+
+## MongoDB related properties - End
 
 spring.application.name=Bitbucket-Processor
 
@@ -44,7 +49,7 @@ aesEncryptionKey=
 logging.file=./logs/bitbucket.log
 
 # CACHE Specific 
-bitbucket.customApiBaseUrl=http://customapi:8080/
+bitbucket.customApiBaseUrl=http://localhost:8080/
 
 server.port=50003
 
