--- a/Kubernetes/Kubernetes-manifest/ingress-uat-knowhow.yaml
+++ b/Kubernetes/Kubernetes-manifest/ingress-uat-knowhow.yaml
@@ -1,26 +1,29 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
+  annotations:
+    appgw.ingress.kubernetes.io/appgw-ssl-certificate: wildcard-tools-publicos-sapient-com
+    kubectl.kubernetes.io/last-applied-configuration: |
+      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"appgw.ingress.kubernetes.io/appgw-ssl-certificate":"wildcard-tools-publicos-sapient-com"},"name":"map-ui","namespace":"uat-map"},"spec":{"ingressClassName":"azure-application-gateway","rules":[{"host":"uat-retrospective.tools.publicis.sapient.com","http":{"paths":[{"backend":{"service":{"name":"map-ui","port":{"number":80}}},"path":"/","pathType":"Exact"}]}}]}}
+  creationTimestamp: "2023-12-14T14:10:48Z"
+  generation: 7
   name: knowhow-ui
   namespace: uat-knowhow
-  annotations:
-    appgw.ingress.kubernetes.io/appgw-ssl-certificate: wildcard-tools-publicos-sapient-comv
-   # kubectl.kubernetes.io/last-applied-configuration: |
-    #  {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"name":"knowhow-ui","namespace":"uat-knowhow"},"spec":{"ingressClassName":"azure-application-gateway","rules":[{"host":"stage-psknowhow.tools.publicis.sapient.com","http":{"paths":[{"backend":{"service":{"name":"knowhow-ui","port":{"number":80}}},"path":"/","pathType":"Exact"}]}}]}}
+  resourceVersion: "8784047"
+  uid: ac29626d-a7c1-4b9c-b1c2-3f832b450a7b
 spec:
   ingressClassName: azure-application-gateway
   rules:
-    - host: stage-psknowhow.tools.publicis.sapient.com
-      http:
-        paths:
-        - path: /
-          backend:
-            service:
-              name: knowhow-ui
-              port:
-                number: 80
-          pathType: Exact
- 
+  - host: stage-psknowhow.tools.publicis.sapient.com
+    http:
+      paths:
+      - backend:
+          service:
+            name: knowhow-ui
+            port:
+              number: 80
+        path: /
+        pathType: Exact
 status:
   loadBalancer:
     ingress:
