DTS-31260: using <= instead of < for edgecase fix

--- a/customapi/src/main/resources/json/mongock/default/field_mapping_structure.json
+++ b/customapi/src/main/resources/json/mongock/default/field_mapping_structure.json
@@ -492,35 +492,35 @@
       {
         "labelValue": "p1",
         "value": "p1",
-        "operator": "<",
+        "operator": "<=",
         "maxValue": "10",
         "minValue": "1"
       },
       {
         "labelValue": "p2",
         "value": "p2",
-        "operator": "<",
+        "operator": "<=",
         "maxValue": "10",
         "minValue": "1"
       },
       {
         "labelValue": "p3",
         "value": "p3",
-        "operator": "<",
+        "operator": "<=",
         "maxValue": "10",
         "minValue": "1"
       },
       {
         "labelValue": "p4",
         "value": "p4",
-        "operator": "<",
+        "operator": "<=",
         "maxValue": "10",
         "minValue": "1"
       },
       {
         "labelValue": "p5",
         "value": "p5",
-        "operator": "<",
+        "operator": "<=",
         "maxValue": "10",
         "minValue": "1"
       }
@@ -600,35 +600,35 @@
       {
         "labelValue": "p1",
         "value": "p1",
-        "operator": "<",
+        "operator": "<=",
         "maxValue": "10",
         "minValue": "1"
       },
       {
         "labelValue": "p2",
         "value": "p2",
-        "operator": "<",
+        "operator": "<=",
         "maxValue": "10",
         "minValue": "1"
       },
       {
         "labelValue": "p3",
         "value": "p3",
-        "operator": "<",
+        "operator": "<=",
         "maxValue": "10",
         "minValue": "1"
       },
       {
         "labelValue": "p4",
         "value": "p4",
-        "operator": "<",
+        "operator": "<=",
         "maxValue": "10",
         "minValue": "1"
       },
       {
         "labelValue": "p5",
         "value": "p5",
-        "operator": "<",
+        "operator": "<=",
         "maxValue": "10",
         "minValue": "1"
       }
