--- a/UI/package.json
+++ b/UI/package.json
@@ -51,16 +51,15 @@
     "@ng-select/ng-select": "9.0.2",
     "@popperjs/core": "^2.11.6",
     "chart.js": "^2.9.4",
-    "crypto-js": "^3.3.0",
     "d3": "^7.6.1",
     "events": "^3.0.0",
     "exceljs": "^4.3.0",
     "file-saver": "^2.0.0-rc.3",
-    "jsencrypt": "3.2.1",
     "primeflex": "^2.0.0",
     "primeicons": "^6.0.1",
     "primeng": "14.1.2",
     "rxjs": "^6.6.3",
+    "jszip": "^3.10.1",
     "uuid": "^9.0.0",
     "xlsx": "^0.18.5",
     "xlsx-style": "0.8.13",
