added xlsx new package version

--- a/UI/package.json
+++ b/UI/package.json
@@ -61,7 +61,7 @@
     "rxjs": "^6.6.3",
     "jszip": "^3.10.1",
     "uuid": "^9.0.0",
-    "xlsx": "^0.18.5",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.1/xlsx-0.20.1.tgz",
     "xlsx-style": "0.8.13",
     "zone.js": "^0.11.2"
   },
