--- a/Kubernetes/knowhow-helm/knowhow-customapi/templates/deployment.yaml
+++ b/Kubernetes/knowhow-helm/knowhow-customapi/templates/deployment.yaml
@@ -40,7 +40,7 @@ spec:
             - name: spring.data.mongodb.uri
               valueFrom:
                 secretKeyRef:
-                  name: knowhow-config-credentials
+                  name: {{ .Values.env}}knhdbconnectionstring
                   key: {{ .Values.env}}knhdbconnectionstring
             # - name: spring.data.mongodb.host
             #   valueFrom:
@@ -50,28 +50,28 @@ spec:
             - name: repoToolAPIKey
               valueFrom:
                 secretKeyRef:
-                  name: knowhow-config-credentials
+                  name: {{ .Values.env}}-repo-tool-api-key
                   key: {{ .Values.env}}-repo-tool-api-key
             - name: aesEncryptionKey
               valueFrom:
                 secretKeyRef:
-                  name: knowhow-config-credentials
-                  key: knowhowaesEncryptionKey
+                  name: knowhowaesencryptionkeynew
+                  key: knowhowaesencryptionkeynew
             - name: auth.secret
               valueFrom:
                 secretKeyRef:
-                  name: knowhow-config-credentials
+                  name: knowhow-auth-secret
                   key: knowhow-auth-secret
 
             - name: spring.data.mongodb.username
               valueFrom:
                 secretKeyRef:
-                  name: knowhow-config-credentials
+                  name: {{ .Values.env}}knhdbusername
                   key: {{ .Values.env}}knhdbusername
             - name: spring.data.mongodb.password
               valueFrom:
                 secretKeyRef:
-                  name: knowhow-config-credentials
+                  name: {{ .Values.env}}knhdbpassword
                   key: {{ .Values.env}}knhdbpassword
             - name: mongock.migration-scan-package
               value: com.publicissapient.kpidashboard.apis.mongock.installation  
@@ -80,6 +80,17 @@ spec:
           envFrom:
           - configMapRef:
               name: knowhow-config
+          volumeMounts:
+            - name: knowhow-secrets-store
+              mountPath: "/mnt/{{ .Values.env}}-secrets-store"
+              readOnly: true
+      volumes:
+        - name: knowhow-secrets-store
+          csi:
+            driver: secrets-store.csi.k8s.io
+            readOnly: true
+            volumeAttributes:
+              secretProviderClass: "{{ .Values.env}}-secretproviderclass"
           livenessProbe:
             tcpSocket:
               port: {{ .Values.service.port }}
@@ -104,3 +115,4 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+
