--- a/customapi/src/main/resources/application.properties
+++ b/customapi/src/main/resources/application.properties
@@ -207,7 +207,7 @@ processorurl.githubaction=http://devops-processor:50022/processor/run
 
 
 ## Connection testing
-testconnection.jiraApi = rest/api/2/issue/createmeta
+testconnection.jiraApi = rest/api/2/project
 testconnection.sonarApi = api/authentication/validate
 testconnection.teamcityApi = app/rest/builds
 testconnection.bambooApi = rest/api/latest/plan.json?os_authType=basic
@@ -216,7 +216,7 @@ testconnection.bitbucketApi = rest/api/1.0/projects
 testconnection.azureBoardApi =_apis/wit/fields
 testconnection.azureRepoApi = _apis/wit/fields
 testconnection.azurePipelineApi = _apis/wit/fields
-testconnection.zephyrApi=rest/api/2/issue/createmeta
+testconnection.zephyrApi= rest/api/2/project
 testconnection.gitlabApi=api/v4/projects
 
 #Ticket Priority
