--- a/processors/teamcity/pom.xml
+++ b/processors/teamcity/pom.xml
@@ -23,7 +23,7 @@
 	<groupId>com.publicissapient.kpidashboard</groupId>
 	<description>Teamcity Build Processor Microservice</description>
 	<packaging>jar</packaging>
-	<version>8.3.4-SNAPSHOT</version>
+	<version>8.3.5</version>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -199,6 +199,6 @@
 
 
 	<scm>
-		<tag>8.3.3</tag>
+		<tag>8.3.5</tag>
 	</scm>
 </project>
