--- a/processors/azure-pipeline/pom.xml
+++ b/processors/azure-pipeline/pom.xml
@@ -23,7 +23,7 @@
     <groupId>com.publicissapient.kpidashboard</groupId>
     <description>Azure Pipeline Build Processor Microservice</description>
     <packaging>jar</packaging>
-    <version>8.3.5</version>
+    <version>8.3.5-SNAPSHOT</version>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -179,6 +179,6 @@
 
 
     <scm>
-        <tag>8.3.5</tag>
+        <tag>8.3.3</tag>
     </scm>
 </project>
