--- a/processors/azure-repo/pom.xml
+++ b/processors/azure-repo/pom.xml
@@ -16,7 +16,7 @@
 	<description>Azure Repo processor service</description>
 	<packaging>jar</packaging>
 	<artifactId>azurerepo-processor</artifactId>
-	<version>8.3.5</version>
+	<version>8.3.5-SNAPSHOT</version>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -229,6 +229,6 @@
 
 
 	<scm>
-		<tag>8.3.5</tag>
+		<tag>8.3.3</tag>
 	</scm>
 </project>
