--- a/processors/gitlab/pom.xml
+++ b/processors/gitlab/pom.xml
@@ -23,7 +23,7 @@
   <description>GitLab processor service</description>
   <packaging>jar</packaging>
   <artifactId>gitlab-processor</artifactId>
-  <version>8.3.5</version>
+  <version>8.3.5-SNAPSHOT</version>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
@@ -239,6 +239,6 @@
 
 
   <scm>
-    <tag>8.3.5</tag>
+    <tag>8.3.3</tag>
   </scm>
 </project>
