--- a/processors/github/pom.xml
+++ b/processors/github/pom.xml
@@ -23,7 +23,7 @@
   <description>Github processor service</description>
   <packaging>jar</packaging>
   <artifactId>github-processor</artifactId>
-  <version>8.3.5</version>
+  <version>8.3.5-SNAPSHOT</version>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
@@ -234,7 +234,7 @@
 
 
   <scm>
-    <tag>8.3.5</tag>
+    <tag>8.3.3</tag>
   </scm>
 </project>
 
