--- a/processors/jenkins/pom.xml
+++ b/processors/jenkins/pom.xml
@@ -16,7 +16,7 @@
 	<groupId>com.publicissapient.kpidashboard</groupId>
 	<description>Jenkins Build Processor Microservice</description>
 	<packaging>jar</packaging>
-	<version>8.3.5</version>
+	<version>8.3.5-SNAPSHOT</version>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -160,7 +160,7 @@
 
 
 	<scm>
-		<tag>8.3.5</tag>
+		<tag>8.3.3</tag>
 	</scm>
 </project>
 
