--- a/processors/sonar/pom.xml
+++ b/processors/sonar/pom.xml
@@ -24,7 +24,7 @@
 	<groupId>com.publicissapient.kpidashboard</groupId>
 	<description>CodeQuality Processor Microservice</description>
 	<packaging>jar</packaging>
-	<version>8.3.5</version>
+	<version>8.3.5-SNAPSHOT</version>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -225,6 +225,6 @@
 
 
 	<scm>
-		<tag>8.3.5</tag>
+		<tag>8.3.3</tag>
 	</scm>
 </project>
