--- a/central-auth-service/pom.xml
+++ b/central-auth-service/pom.xml
@@ -15,4 +15,19 @@
 		<module>authcommon</module>
 		<module>authapi</module>
 	</modules>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.5.3</version>
+				<configuration>
+					<tagNameFormat>@{project.version}</tagNameFormat>
+					<autoVersionSubmodules>true</autoVersionSubmodules>
+					<arguments>-Dmaven.javadoc.skip=true</arguments>
+					<arguments>-DskipTests=true</arguments>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
