--- a/processors/bamboo/pom.xml
+++ b/processors/bamboo/pom.xml
@@ -23,7 +23,7 @@
 	<description>bamboo processor</description>
 	<packaging>jar</packaging>
 	<artifactId>bamboo-processor</artifactId>
-	<version>10.0.0-SNAPSHOT</version>
+	<version>11</version>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
