--- a/Kubernetes/Kubernetes-manifest/customapi.yaml
+++ b/Kubernetes/Kubernetes-manifest/customapi.yaml
@@ -25,7 +25,7 @@ spec:
       #   command: ['sh', '-c', "until nslookup customapi.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for customapi; sleep 2; done"]
       containers:
         - name: customapi
-          image: speedtools.azurecr.io/knowhow-customapi:10.0.0
+          image: speedtools.azurecr.io/knowhow-customapi:10.1.1-SNAPSHOT
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
