--- a/common/pom.xml
+++ b/common/pom.xml
@@ -15,7 +15,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>common</artifactId>
 	<groupId>com.publicissapient.kpidashboard</groupId>
-	<version>10.0.0</version>
+	<version>10.1.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<description>Common package used by all microservices</description>
 
