--- a/kafka-consumers/notification-consumer/pom.xml
+++ b/kafka-consumers/notification-consumer/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<groupId>com.publicissapient.kpidashboard</groupId>
 	<artifactId>notification-consumer</artifactId>
-	<version>10.0.0</version>
+	<version>10.1.1-SNAPSHOT</version>
 	<name>notification-consumer</name>
 	<description>Notification consumer for Apache Kafka</description>
 	<properties>
