--- a/processors/gitlab/pom.xml
+++ b/processors/gitlab/pom.xml
@@ -23,7 +23,7 @@
   <description>GitLab processor service</description>
   <packaging>jar</packaging>
   <artifactId>gitlab-processor</artifactId>
-  <version>10.0.0</version>
+  <version>10.1.1-SNAPSHOT</version>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
